--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <form action="" class="name" name="todo">
-        <input type="text" name="task" placeholder="task">
+        <input class="input_write" type="text" name="task" placeholder="task">
         <button>Add</button>
     </form>
 
-    
+    <input type="checkbox" >
 
 
     <script type="module" src="./ind.js"></script>
