--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,12 +12,17 @@
 <!-- <img src="./logo-white.svg" alt=""> -->
 
 <body>
-    <form action="" class="name" name="todo">
-        <input class="input_write" type="text" name="task" placeholder="task">
-        <button>Add</button>
-    </form>
+    <div class="first">
+        <form action="" class="name" name="todo">
+            <input class="input_write" type="text" name="task" placeholder="task">
+            <button>Add</button>
+        </form>
 
-    <input type="checkbox" >
+        
+            <input class="pop input_write" type="text" placeholder="Search">
+        
+
+    </div>
 
 
     <script type="module" src="./ind.js"></script>
